    - Add .gitlab-ci.yml for CI. Issue #16
    - Set EW_GIT_REF = 6382013f to read amplitude values from ARC message (read_arc.h and read_arc.c). Issue earthworm/ew2openapi#25, https://gitlab.com/seismic-software/earthworm/-/issues/47

* Release 1.2.7 (2020/12/22)
    - Change variable ARGS to CMD for ew_run_bash, ew_run_screen, ew_exec_bash, ew_exec_screen.
    - Add 'make check_required_commands' for checking the availability of all necessary commands.
    - Add 'make EW_ENV=... check_operation' for checking basic functioning within an Earthworm Environment.
    - Use command 'shell' in Makefile and break compatibility with 'make' different than 'GNU make'.
    - Obsfucate some make rules by prefixing the underscore character '_'.
    - Change default make command to 'make info'.
    - Set EW_SVN_REVISION = 8141.
    - Add references to Github repository.
    - Hotfix: 1.2.1: change Memphis test git repository to
      https://github.com/matteoquintiliani/earthworm-memphis-test.git.  (2020/04/11)
    - Hotfix: 1.2.2: (2020/05/11)
        - remove -i from docker command in create_tank_from_ot_lat_lon_radius.sh. Issue #11
        - Set EW_SVN_REVISION = 8145.
    - Hotfix: 1.2.3: (2020/05/20)
        - Add option --user to docker command in create_tank_from_ot_lat_lon_radius.sh. Issue #12
    - Hotfix: 1.2.4: minor fix for previous 1.2.3. Issue #12 (2020/05/20)
    - Hotfix: 1.2.5: minor fix for previous 1.2.4 and fix help in create_tank_from_ot_lat_lon_radius.sh.. Issue #10, #11 and #12 (2020/05/20)
    - Hotfix: 1.2.6: Compile ew2openapi 1.12.0 (2020/12/18)
    - Hotfix: 1.2.7: Set EW_SVN_REVISION = 8304 (2020/12/22)

* Release 1.1.2 (2020/04/09)
    - Copy files in a Earthworm Environment by running or executing a Docker Container.
      Example: 'make EW_ENV=ew_env_test1 cp  SRC_PATH=... DEST_PATH=...'
    - Extend README.md
    - Hotfix: 1.1.1: improve 'make ew_run_bash' and 'make ew_exec_bash'.  (2020/04/10)