@@ -31,7 +31,7 @@ echo "    $ docker-compose exec hew bash"
 echo ""
 echo "Eseguire direttamente un comando all'interno del container 'hew', ad esempio status."
 echo ""
-echo "    $ docker-compose exec hew bash -c '. ~/.bashrc && status'"
+echo "    $ docker-compose exec hew bash -c 'status'"
 echo ""
 echo "Chiudere e rimuovere il container in maniera pulita:"
 echo ""
@@ -47,7 +47,7 @@ echo "E' possibile accedere al container da qualsiasi directory anche tramite il
 echo ""
 echo "    $ docker exec -it hew bash"
 echo ""
-echo "    $ docker exec -it hew bash -c '. ~/.bashrc && status'"
+echo "    $ docker exec -it hew bash -c 'status'"
 echo ""
 echo "Per visualizzare questo help eseguire:"
 echo ""
